--- a/app/views/frontend/_content.html.erb
+++ b/app/views/frontend/_content.html.erb
@@ -2,7 +2,7 @@
     <div class="image-holder-holder" data-image-id="<%= post.id %>">
       <div class="image-holder">
         <div class="likes-counter <%= 'liked' if (@user.images.exists? post if @user) %>">
-          <%= (@user && ! @user.images.exists?(post)) ? (link_to raw(%(<p>#{post.likes_count}</p>)), {action: :like, photo_id: post.id}) : raw(%(<p>#{post.likes_count}</p>))  %>
+          <%= (@user && ! @user.images.exists?(post)) ? (link_to raw(%(<p>#{post.likes_count}</p>)), {action: :like, photo_id: post.id}, remote: true) : raw(%(<p>#{post.likes_count}</p>))  %>
         </div>
         <div class="image-cropper"> <%= link_to image_tag(post.image_link), action: :like, photo_id: post.id, remote: true -%></div>
         <div class="image-data"><%= image_tag post.auth.avatar_url, class: :avatar %>
@@ -10,4 +10,6 @@
       </div>
     </div>
 <%- end -%>
-<%= link_to 'Следующая страница', {controller: params[:controller], action: params[:action], order: params[:order] || 'time', page: (params[:page].to_i+1) || 2}, remote: true, class: 'next-page-link' %>
+<div class="preloader">
+<%= link_to image_tag('preloader.png'), {controller: params[:controller], action: params[:action], order: params[:order] || 'time', page: (params[:page].to_i+1) || 2}, remote: true, class: 'next-page-link' %>
+</div>
