--- a/app/views/frontend/index.js.erb
+++ b/app/views/frontend/index.js.erb
@@ -1,1 +1,16 @@
-<%= raw params[:page] == 1 ? '$(".main-content").html' : '$(".next-page-link").replaceWith' %>('<%= escape_javascript render 'content' %>');
+(function(){
+    <% if params[:page] == '1' %>
+    $(".main-content").html(' ');
+    <% if params[:order] == 'time' %>
+            $($('.order-select > a')[0]).addClass('selected');
+            $($('.order-select > a')[1]).removeClass('selected');
+        <% else %>
+            $($('.order-select > a')[1]).addClass('selected');
+            $($('.order-select > a')[0]).removeClass('selected');
+    <% end %>
+    $(".main-content").html('');
+    <% else %>
+    $(".next-page-link").remove();
+    <% end %>
+    $(".main-content").append('<%= escape_javascript render 'content' %>');
+})();
