--- a/app/views/frontend/about.html.erb
+++ b/app/views/frontend/about.html.erb
@@ -1,29 +1,63 @@
-<%= image_tag 'about.png' %>
-<div class="about-content">
-  <div class="text-block">
-    <h2>Как получить задание?</h2>
-    <p>Зафоловь канал Lipton в Instagram или Twitter. В течение недели в ленте будут появляться наши картинки-задания,
-      где будет указано, что нужно фотографировать и с каким тегом.</p>
-    <p>Будь внимательным и стань первым, кто их увидит.</p>
-    <p>Всего будет три хештега, по которым мы будем определять лидеров.</p>
+<div class="icosBlock oHidden">
+  <div class="icoWrap fLeft mw265 s-ico1">
+    <div class="ico1">
+      <h2>Авторизуйся</h2>
+      <p>на&nbsp;сайте&nbsp;при&nbsp;помощи<br />социальной сети</p>
+    </div>
   </div>
-  <div class="text-block">
-    <h2>Как стать ближе всех к победе?</h2>
-    <p>Чтобы продвинуть фотографию ближе к победе, голосуй за нее сам
-      и предлагай голосовать друзьям. Показать фотографию друзьям очень легко — нужно нажать на кнопку «поделиться»
-      около фотки. Голосовать могут только пользователи, авторизованные через Instagram, Twitter и Facebook. Десять
-      участников, которые наберут больше всех голосов, окажутся в списке лидеров. Мы выберем лучшие фотографии из всех
-      работ и раздадим подарки всем десяти! Какими будут подарки?</p>
-    <p>Здесь есть вся информация.</p>
+  <div class="icoWrap fLeft mw320 s-ico2">
+    <div class="ico2">
+      <h2>Получи&nbsp;задание</h2>
+      <p>Задания&nbsp;обновляются&nbsp;каждые<br />3&nbsp;дня,&nbsp;успей&nbsp;выполнить<br />его&nbsp;в&nbsp;срок!</p>
+    </div>
   </div>
-  <div class="text-block">
-    <h2 class="hint">Подсказка</h2>
-    <p>Не забывай, что для получения призов нужно не только вывесить фотографию с хештегом через Instagram или Twitter,
-      но и авторизоваться на нашем сайте под тем же аккаунтом, с которого ты публикуешь фотографии.</p>
+  <div class="icoWrap fLeft oHidden mw305 s-ico3">
+    <div class="ico3 oHidden">
+      <h2>Загрузи фото</h2>
+      <p>в свой Инстаграм или<br />Твиттер, отметив его<br />специальным хештэгом</p>
+    </div>
   </div>
-  <div class="signup">
-    <div>
-      <%= link_to image_tag 'about_participate.png', action: :login %>
+</div>
+<div class="txtBlock">
+  <h2 class='title'>Как получить задание?</h2>
+  <p class='d'>Зафоловь канал Lipton в Instagram или Twitter. В течение недели <br />
+    в ленте будут появляться наши картинки-задания, где будет <br />
+    указано, что нужно фотографировать и с каким тегом. <br />
+    Будь внимательным и стань первым, кто их увидит. <br />
+    Всего будет три хештега, по которым <br /> мы будем определять лидеров.</p>
+  <p class='m'>Зафоловь канал Lipton в Instagram <br />  или Twitter. В течение недели <br />
+    в ленте будут появляться наши <br />  картинки&nbsp;-&nbsp;задания,&nbsp;где&nbsp;будет&nbsp;указано,&nbsp;что <br />
+    нужно&nbsp;фотографировать&nbsp;и&nbsp;с&nbsp;каким&nbsp;тегом. <br />
+    Будь внимательным и стань первым, кто их увидит. <br />
+    Всего будет три хештега, по которым <br /> мы будем определять лидеров.</p>
+  <div class="divitor"></div>
+  <h2>Как стать ближе всех <br /> к победе?</h2>
+  <p class='d'>Чтобы продвинуть фотографию ближе к победе, голосуй за нее сам <br />
+    и предлагай голосовать друзьям. Показать фотографию друзьям очень <br />
+    легко — нужно нажать на кнопку «поделиться» около фотки. Голосовать <br />
+    могут только пользователи, авторизованные через Instagram, Twitter <br />
+    и Facebook. Десять участников, которые наберут больше всех голосов, <br />
+    окажутся в списке лидеров. Мы выберем лучшие фотографии из всех <br />
+    работ и раздадим подарки всем десяти! Какими будут подарки? <br /> Здесь есть вся информация.</p>
+  <p class='m'>Чтобы продвинуть фотографию ближе <br />
+    к победе, голосуй за нее сам<br />
+    и&nbsp;предлагай&nbsp;голосовать&nbsp;друзьям.&nbsp;Показать<br />
+    фотографию&nbsp;друзьям&nbsp;очень&nbsp;легко&nbsp;— <br />
+    нужно нажать&nbsp;на&nbsp;кнопку&nbsp;«поделиться»<br />
+    &nbsp;около&nbsp;фотки. <br /> Голосовать	могут только пользователи, <br />
+    авторизованные через Instagram, Twitter<br />
+    и Facebook. Десять участников, которые <br />
+    наберут больше всех голосов,
+    окажутся в списке лидеров. Мы выберем лучшие фотографии из всех
+    работ и раздадим подарки всем десяти! Какими будут подарки?
+    Здесь есть вся информация.</p>
+  <div class="divitor"></div>
+  <h2 class="withBg"><span>Подсказка</span></h2>
+  <p class='d'>Не забывай, что для получения призов нужно не только вывесить фотографию с хештегом через Instagram или Twitter, но и авторизоваться на нашем сайте под тем же аккаунтом, с которого ты публикуешь фотографии.</p>
+  <p class='m'>Не забывай, что для получения призов нужно не только вывесить фотографию с хештегом через Instagram или Twitter, но и авторизоваться на нашем сайте под тем же аккаунтом, с которого ты публикуешь фотографии.</p>
+</div>
+<div class="button">
+      <%= link_to image_tag raw('<a href="">Участвовать в конкурсе</a>'), action: :login %>
     </div>
   </div>
 </div>
