--- a/app/views/frontend/like.js.erb
+++ b/app/views/frontend/like.js.erb
@@ -1,1 +1,1 @@
-$('[data-image-id="<%= @image.id %>"] > .image-holder > .likes-counter').addClass('liked').html('<p><%= @image.likes_count %></p>');
+$('[data-image-id="<%= @image.id %>"] .likes-counter').addClass('liked').html('<p><%= @image.likes_count %></p>');
