--- a/app/assets/stylesheets/frontend.css.scss
+++ b/app/assets/stylesheets/frontend.css.scss
@@ -196,6 +196,9 @@ body {
         z-index: 4;
       }
     }
+    .task-control {
+      display: none;
+    }
     .tasks-carousel-holder {
       width: 100%;
       .tasks-carousel {
