--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -3,8 +3,10 @@
   <button class="w-control-close"></button>
   <p class="title">Войти через:</p>
   <div class="buttons">
+    <p class="with-notice"><a href="/auth/facebook" class="w-button facebook"><span>Facebook</span></a>
+
     <div class="facebook-notice">Залогинившись через Facebook, ты сможешь только голосовать</div>
-    <p><a href="/auth/facebook" class="w-button facebook"><span>Facebook</span></a></p>
+    </p>
     <p><a href="/auth/twitter" class="w-button twitter"><span>Twitter</span></a></p>
     <p><a href="/auth/instagram" class="w-button instagram"><span>Instagram</span></a></p>
   </div>
@@ -61,6 +63,14 @@
     <li class="task">Задание III</li>
     <div class="lavalamp"></div>
   </ul>
+  <div class="task-control">
+   <div class="nav previous">Предыдущее</div>
+    <div class="nav next">Следующее</div>
+    <div class="task">
+      <h4>Задание</h4>
+      <h3>Lipton solid assam</h3>
+    </div>
+  </div>
   <div class="tasks-carousel-holder">
     <div class="tasks-carousel">
       <div class="tasks-carousel-content">
