--- a/app/views/frontend/view.html.erb
+++ b/app/views/frontend/view.html.erb
@@ -1,3 +1,6 @@
+<div class="user">
+  <div class=""></div>
+</div>
 <% @images.each do |post| -%>
     <div class="image_holder">
       <%= link_to image_tag(post.image_link), post.post_url -%>
