--- a/app/assets/stylesheets/frontend.css.scss
+++ b/app/assets/stylesheets/frontend.css.scss
@@ -7,7 +7,9 @@ body {
   background-size: 100% auto;
   background-attachment: fixed;
   min-width: 640px;
+  width: 100%;
   overflow-x: hidden;
+  position: absolute;
   z-index: 1;
 }
 .navbar {
@@ -209,13 +211,14 @@ body {
         background: -webkit-linear-gradient(bottom, #e9e9e9, #ffffff);
         background: -o-linear-gradient(bottom, #e9e9e9, #ffffff);
         background: -ms-linear-gradient(bottom, #e9e9e9 0%, #ffffff 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr=#ffffff,endColorstr=#e9e9e9,GradientType=0); zoom: 1;
+        zoom: 1;
         height: 250px;
         margin: 0 7px;
         overflow: hidden;
         position: relative;
         left: 0;
         clear: both;
+        filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr=#ffffff,endColorstr=#e9e9e9,GradientType=0);
         .tasks-carousel-content {
           width: 305%;
           position: relative;
@@ -346,13 +349,14 @@ body {
         background: -webkit-linear-gradient(top, #e9e9e9, #ffffff);
         background: -o-linear-gradient(top, #e9e9e9, #ffffff);
         background: -ms-linear-gradient(top, #e9e9e9, #ffffff);
-        filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr=#e9e9e9,endColorstr=#ffffff,GradientType=0); zoom: 1;
+        zoom: 1;
         border: 1px #ffffff;
         border-radius: 5px;
         box-shadow: #000000;
         padding: 7px 7px 5px;
         box-shadow: inset 0 1px 3px gray, inset 0 -10px 5px white;
         border-bottom: #ffffff 1px solid;
+        filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr=#e9e9e9,endColorstr=#ffffff,GradientType=0);
         a, a:visited {
           text-decoration: none;
           color: #934c00;
@@ -390,10 +394,11 @@ body {
           background: -webkit-linear-gradient(bottom, #ffe430, #ffbb10);
           background: -o-linear-gradient(bottom, #ffe430, #ffbb10);
           background: -ms-linear-gradient(bottom, #ffe430, #ffbb10);
-        filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr=#ffbb10,endColorstr=#ffe430,GradientType=0); zoom: 1;
+          zoom: 1;
           width: 104px;
           height: 36px;
           border-bottom: 2px #df7500 solid;
+          filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr=#ffbb10,endColorstr=#ffe430,GradientType=0);
           &:first-child {
             border-right: 1px solid #e4a217;
           }
@@ -489,119 +494,8 @@ body {
         -webkit-transition: 0.2s; /* Safari and Chrome */
         -o-transition: 0.2s; /* Opera */
       }
-      .popup {
-        display: none;
-        width: 612px;
-        height: 740px;
-        padding: 18px 18px 0;
-        position: fixed;
-        left: 50%;
-        top: 50%;
-        margin-left: -306px;
-        margin-top: -371px;
-        background: repeat-x url("popup-bottom-background.png") bottom white;
-        z-index: 25;
-        font: "PT Sans";
-        .info {
-          .author {
-            float: left;
-            height: 45px;
-            background-position: left center;
-            background-repeat: no-repeat;
-            background-size: contain;
-            padding-left: 45px;
-            p.name {
-              font-weight: bold;
-              font-size: 20px;
-            }
-            p.hashtag {
-              font-size: 14px;
-              color: #21b8ff;
-              line-height: 0;
-            }
-          }
-          .activity {
-            .social {
-              float: right;
-              position: relative;
-              .button {
-                float: right;
-              }
-              .share {
-                margin-top: 45px;
-                background: #f8f8f8;
-                border: #ccc 1px solid;
-                box-shadow: #d3d3d3 0px 1px 1px;
-                border-radius: 3px;
-                width: 154px;
-                position: absolute;
-                right: 0;
-                display: none;
-                p {
-                  height: 22px;
-                  padding: 10px;
-                  border-top: #ffffff 1px solid;
-                  border-bottom: #dedede 1px solid;
-                  margin: 0;
-                  background-repeat: no-repeat;
-                  background-position: 93% center;
-                  background-size: 22px 15px;
-                  &:first-child {
-                    border-top: none;
-                    background-image: url("twitter.png");
-                  }
-                  &:last-child {
-                    border-bottom: none;
-                    background-image: url("facebook.png");
-                  }
-                }
-              }
-              &:hover .share {
-                display: block;
-              }
-            }
-            .like {
-              float: right;
-
-            }
-            .button {
-              height: 16px;
-              border: #ccc 1px solid;
-              border-radius: 3px;
-              margin-left: 8px;
-              padding: 7px 20px 13px;
-              font-weight: bold;
-              font-size: 14px;
-              color: #737373;
-              background: #f5f5f5;
-              background: linear-gradient(bottom, #e9e9e9, #ffffff);
-              background: -moz-linear-gradient(bottom, #e9e9e9, #ffffff);
-              background: -webkit-linear-gradient(bottom, #e9e9e9, #ffffff);
-              background: -o-linear-gradient(bottom, #e9e9e9, #ffffff);
-              background: -ms-linear-gradient(bottom, #e9e9e9, #ffffff);
-              filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr=#ffffff,endColorstr=#e9e9e9,GradientType=0); zoom: 1;
-              box-shadow: #d3d3d3 0px 1px 4px;
-            }
-          }
-        }
-        .image {
-          width: 612px;
-          height: 612px;
-          vertical-align: middle;
-          overflow: hidden;
-          background-size: cover;
-        }
-        .text {
-          margin-top: 38px;
-          height: 32px;
-          background-size: contain;
-          background-position: right center;
-          background-repeat: no-repeat;
-          padding-right: 40px;
-          .social {
-            float: right;
-          }
-        }
+      .popup-holder {
+        position: static;
       }
       .likes-counter {
         z-index: 12;
@@ -673,3 +567,120 @@ body {
     }
   }
 }
+
+.popup {
+  display: none;
+  width: 612px;
+  height: 740px;
+  padding: 18px 18px 0;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  margin-left: -306px;
+  margin-top: -371px;
+  background: repeat-x url("popup-bottom-background.png") bottom white;
+  z-index: 25;
+  font: "PT Sans";
+  .info {
+    .author {
+      float: left;
+      height: 45px;
+      background-position: left center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      padding-left: 45px;
+      p.name {
+        font-weight: bold;
+        font-size: 20px;
+      }
+      p.hashtag {
+        font-size: 14px;
+        color: #21b8ff;
+        line-height: 0;
+      }
+    }
+    .activity {
+      .social {
+        float: right;
+        position: relative;
+        .button {
+          float: right;
+        }
+        .share {
+          margin-top: 45px;
+          background: #f8f8f8;
+          border: #ccc 1px solid;
+          box-shadow: #d3d3d3 0px 1px 1px;
+          border-radius: 3px;
+          width: 154px;
+          position: absolute;
+          right: 0;
+          display: none;
+          p {
+            height: 22px;
+            padding: 10px;
+            border-top: #ffffff 1px solid;
+            border-bottom: #dedede 1px solid;
+            margin: 0;
+            background-repeat: no-repeat;
+            background-position: 93% center;
+            background-size: 22px 15px;
+            &:first-child {
+              border-top: none;
+              background-image: url("twitter.png");
+            }
+            &:last-child {
+              border-bottom: none;
+              background-image: url("facebook.png");
+            }
+          }
+        }
+        &:hover .share {
+          display: block;
+        }
+      }
+      .like {
+        float: right;
+
+      }
+      .button {
+        height: 16px;
+        border: #ccc 1px solid;
+        border-radius: 3px;
+        margin-left: 8px;
+        padding: 7px 20px 13px;
+        font-weight: bold;
+        font-size: 14px;
+        color: #737373;
+        background: #f5f5f5;
+        background: linear-gradient(bottom, #e9e9e9, #ffffff);
+        background: -moz-linear-gradient(bottom, #e9e9e9, #ffffff);
+        background: -webkit-linear-gradient(bottom, #e9e9e9, #ffffff);
+        background: -o-linear-gradient(bottom, #e9e9e9, #ffffff);
+        background: -ms-linear-gradient(bottom, #e9e9e9, #ffffff);
+        filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr=#ffffff,endColorstr=#e9e9e9,GradientType=0); zoom: 1;
+box-shadow: #d3d3d3 0px 1px 4px;
+  }
+  }
+  }
+.image {
+  width: 612px;
+  height: 612px;
+  vertical-align: middle;
+  overflow: hidden;
+  background-size: cover;
+}
+.text {
+  margin-top: 38px;
+  height: 32px;
+  background-size: contain;
+  background-position: right center;
+  background-repeat: no-repeat;
+  padding-right: 40px;
+  .social {
+    float: right;
+  }
+}
+  }
+
+
