--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -1,10 +1,9 @@
-<% unless @user %>
+<% if !@user %>
 <div class="auth-block">
   <button class="w-control-close"></button>
   <p class="title">Войти через:</p>
   <div class="buttons">
     <p class="with-notice"><a href="/auth/facebook" class="w-button facebook"><span>Facebook</span></a>
-
     <div class="facebook-notice">Залогинившись через Facebook, ты сможешь только голосовать</div>
     </p>
     <p><a href="/auth/twitter" class="w-button twitter"><span>Twitter</span></a></p>
@@ -13,6 +12,20 @@
   <p class="note">Авторизуйся, чтобы выигрывать призы <br>
     и голосовать за фотографии</p>
 </div>
+<% elsif @user.email.blank? %>
+        <div class="auth-block">
+          <button class="w-control-close"></button>
+          <p class="title">Войти через:</p>
+          <div class="buttons">
+            <p class="with-notice"><a href="/auth/facebook" class="w-button facebook"><span>Facebook</span></a>
+            <div class="facebook-notice">Залогинившись через Facebook, ты сможешь только голосовать</div>
+            </p>
+            <p><a href="/auth/twitter" class="w-button twitter"><span>Twitter</span></a></p>
+            <p><a href="/auth/instagram" class="w-button instagram"><span>Instagram</span></a></p>
+          </div>
+          <p class="note">Авторизуйся, чтобы выигрывать призы <br>
+            и голосовать за фотографии</p>
+        </div>
 <% end %>
 
 <div class="ad-carousel">
@@ -64,8 +77,8 @@
     <div class="lavalamp"></div>
   </ul>
   <div class="task-control">
-   <div class="nav previous">Предыдущее</div>
-    <div class="nav next">Следующее</div>
+   <div class="nav previous"><a href="#">Предыдущее</a></div>
+    <div class="nav next"><a href="#">Следующее</a></div>
     <div class="task">
       <h4>Задание</h4>
       <h3>Lipton solid assam</h3>
